--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Prata&family=Roboto+Condensed:wght@300&family=Tinos&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -33,11 +36,11 @@
                 </form>
             </div>
             <div class="city-list"></div>
+            <div class="saved-city"></div>
         </div>
         <div class="weather-display">
             <div class="weather-info">
-                <ul class="cityList">
-                </ul>
+                <ul class="cityList"></ul>
             </div>
             <div class="weather-imgs">
                 <h2>5-Day Forecast</h2>
@@ -51,6 +54,8 @@
         var queryURLBase = "http://api.openweathermap.org/data/2.5/forecast?q=";
         var imperialUnits = "&units=imperial";
         var apiKey = "&appid=086828ce404d02fbf057835f64951922";
+        var lat = "";
+        var lon = "";
 
         var userCity = "";
 
@@ -63,56 +68,92 @@
             $.ajax({
                 url: queryURL,
                 method: "GET"
+
+                //function to get main weather info
             }).done(function (weatherData) {
 
-                //add to html
+                //add to html weather-info class
                 var weatherInfoSection = $("<div>");
                 weatherInfoSection.addClass("weather");
                 $(".weather-info").append(weatherInfoSection);
 
-                var cityItem = $("<li>");
+                //add to html city-list class
+                var cityItem = $("<button>");
                 cityItem.addClass("city");
                 $(".city-list").append(cityItem);
 
+                //delete extra content from the date gathered from api
                 var weatherDataDate = weatherData.list[0].dt_txt.toString().slice(0, 10);
+                //save city weather icon in variable to make easier to append in next step
+                var cityWeatherIcon = "<img src=http://openweathermap.org/img/w/" + weatherData.list[0].weather[0].icon + ".png>";
 
+                //append wanted data from api to html
                 $(".city").append("<h2>" + weatherData.city.name + "</h2>");
-                $(".weather").append("<h3>" + weatherData.city.name + " " + weatherDataDate + "</h3>");
-                $(".weather").append("<h5>" + "Temperature: " + weatherData.list[0].main.temp + "F" + "</h5>");
+                $(".weather").append("<h2>" + weatherData.city.name + " " + weatherDataDate + cityWeatherIcon + "</h2>");
+                $(".weather").append("<h5>" + "Temperature: " + weatherData.list[0].main.temp + "&deg;F" + "</h5>");
                 $(".weather").append("<h5>" + "Humidity: " + weatherData.list[0].main.humidity + "%" + "</h5>");
                 $(".weather").append("<h5>" + "Wind Speed " + weatherData.list[0].wind.speed + " MPH" + "</h5>");
 
+                //for loop to gather info for 5 day outlook content 
                 for (var i = 1; i < 35; i += 8) {
                     var dailyWeather = $("<div>");
                     dailyWeather.addClass("weatherslot")
                     dailyWeather.attr("id", "slot-" + i);
                     $(".weather-imgs-content").append(dailyWeather);
 
+                    //delete extra content from the date gathered from api
                     var littleWeatherDate = weatherData.list[i].dt_txt.toString().slice(0, 10);
+                    //save city weather icon in variable to make easier to append in next step
                     var weatherIcon = "http://openweathermap.org/img/w/" + weatherData.list[i].weather[0].icon + ".png";
 
+                    //append wanted data from api to html
                     $("#slot-" + i).append("<h6>" + littleWeatherDate + "</h6>");
                     $("#slot-" + i).append("<img src=" + weatherIcon + ">");
-                    $("#slot-" + i).append("<h6>" + "Temperature: " + weatherData.list[i].main.temp + "F" + "</h6>");
+                    $("#slot-" + i).append("<h6>" + "Temperature: " + weatherData.list[i].main.temp + "&deg;F" + "</h6>");
                     $("#slot-" + i).append("<h6>" + "Humidity: " + weatherData.list[i].main.humidity + "%" + "</h6>");
-
                 }
 
-            });
+                //store lat and lon var 
+                lat = weatherData.city.coord.lat;
+                lon = weatherData.city.coord.lon;
 
-        }
+            //then run new api call to get uv info w previous functions lat and lon
+            }).then(function (weatherUV) {
 
+                $.ajax({
+                    url: "http://api.openweathermap.org/data/2.5/uvi?lat=" + lat + "&lon=" + lon + apiKey,
+                    method: "GET"
+
+                }).done(function (weatherUV) {
+
+                    $(".weather").append("<h5>" + "UV Index: " + weatherUV.value + "</h5>");
+                })
+
+            })
+        };
 
         //onclick event for search button
         $('#search-button').on("click", function () {
 
-            var userCity = $("#city").val().trim();
+            userCity = $("#city").val().trim();
 
             var newUrl = queryURLBase + userCity + imperialUnits + apiKey;
 
+            //run query w new url
             runQuery(newUrl);
             return false;
         });
+
+        //onclick event for city list item
+        // $('button.city').on("click", function () {
+        //     var previousCity = $(".city").val();
+
+        //     var newUrl = queryURLBase + previousCity + imperialUnits + apiKey;
+
+        //     runQuery(newUrl);
+        //     return false;
+        // });
+
 
 
 
